# VulkanPlayground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  test_input
.github/workflows/: cmake-multi-platform.yml  release.yml
executable/: main.cpp  rendering.hpp
lib/include/: allocator.hpp  command.hpp  common.hpp  device.hpp  graphics_pipeline.hpp  instance.hpp  module_loader.hpp  swapchain.hpp  utils.hpp  vulkan.hpp  vulkan_app.hpp  window.hpp
lib/src/: device.cpp  graphics_pipeline.cpp  swapchain.cpp  utils.cpp  vma.cpp  vulkan.cpp  vulkan_app.cpp
modules/: say_goodbye.cpp  say_hello.cpp  shared.hpp
shaders/: simple_triangle.frag.glsl  simple_triangle.vert.glsl
